# home-assistant-sila-plugin

./: .gitignore  LICENSE  README.md  hacs.json  requirements_test.txt
.github/workflows/: test.yml  validate.yml
custom_components/sila/: __init__.py  button.py  cloud.py  cloud_proto.py  command_runner.py  config_flow.py  connection.py  const.py  coordinator.py  entity.py  icons.json  image.py  manifest.json  number.py  sensor.py  services.yaml  sila_import.py  strings.json
demo_server/: Camera.sila.xml  TemperatureController.sila.xml  cloud_bridge.py  pyproject.toml
demo_server/sila_demo_server/: __init__.py  __main__.py  server.py
demo_server/sila_demo_server/feature_implementations/: __init__.py  camera_impl.py  temperaturecontroller_impl.py  updated_temperaturecontroller_impl.py
scripts/: dev.sh
tests/: conftest.py  test_init.py
