[project]
name = "sila_demo_server"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sila_demo_server*"]

[tool.setuptools.package-data]
"sila_demo_server.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
